--- a/Victoria Universalis/localisation/000_Victoria Universalis.csv
+++ b/Victoria Universalis/localisation/000_Victoria Universalis.csv
@@ -1,5 +1,4 @@
 ;;;;;;;;;;;;;x,,,,,,,,,,,,,,,,,,,,,,
-labourers_gold;Gold Labourers;;;;;;;;;;;;;;
 bankers;Bankers;;;;;;;;;;;;;;
 no_personality;§WNo Bonus;;;;;;;;;;;;;;
 attack_1.1;+1 Attack;;;;;;;;;;;;;;
@@ -1182,7 +1181,7 @@ EVTDESC91005;POP promotion factors and national focus bonuses has been split up 
 EVTOPTA91005;Got it.;;;;;;;;;;;;;;;;;;;;;;;x;;;;;;;;;;;;;;;;;;;;;;;;;;;x
 EVTOPTB91005;I would like to know more.;;;;;;;;;;;;;;;;;;;;;;;x
 EVTNAME91006;Tutorial: The Economy;;;;;;;;;;;;;;;;;;;;;;;x
-EVTDESC91006;A number of small changes have been made in an effort to balance the in-game economy and lessen the frequency of economic crashes. New factory goods have been introduced and POP needs have been rebalanced to make normally useless goods more important. Governments will be forced to pay money to POPs through social spending in order to get pop growth. A world bank has been implemented that works by buying up unsold goods in the world market in order to stimulate faltering economies. The world bank does not have infinite money or infinite demand however, so it is possible for some goods to go unsold if is an extreme disparity between supply and demand.;;;;;;;;;;;;;;;;;;;;;;;x
+EVTDESC91006;A number of small changes have been made in an effort to balance the in-game economy and lessen the frequency of economic crashes. New factory goods have been introduced and POP needs have been rebalanced to make normally useless goods more important. Governments will be forced to pay money to POPs through social spending in order to get pop growth. A world bank has been implemented that buys unsold goods in the world market in order to stimulate faltering economies. The world bank does not have infinite money or infinite demand, so it is possible for some goods to go unsold if there is an extreme disparity between supply and demand.;;;;;;;;;;;;;;;;;;;;;;;x
 EVTOPTA91006;Got it.;;;;;;;;;;;;;;;;;;;;;;;x
 EVTOPTB91006;I would like to know more.;;;;;;;;;;;;;;;;;;;;;;;x
 EVTNAME91007;Tutorial: Combat;;;;;;;;;;;;;;;;;;;;;;;x
