--- a/Victoria Universalis/localisation/000_Victoria Universalis.csv
+++ b/Victoria Universalis/localisation/000_Victoria Universalis.csv
@@ -850,7 +850,7 @@ CHI_1481;Port Arthur;;;;;;;;;;;;;x
 CHI_1566;Qingdao;;;;;;;;;;;;;x
 CHI_1569;Weihaiwei;;;;;;;;;;;;;x
 AUS_782;South Dalmatia;;;;;;;;;;;;;x
-BEL_388;Brussels;;;;;;;;;;;;;x
+BEL_388;Brabant;;;;;;;;;;;;;x
 TUR_821;Macedonia;;;;;;;;;;;;;x
 ARA_1157;Arabia;;;;;;;;;;;;;x
 ARA_1173;Arabian Coast;;;;;;;;;;;;;x
