--- a/Victoria Universalis/localisation/000_Victoria Universalis.csv
+++ b/Victoria Universalis/localisation/000_Victoria Universalis.csv
@@ -840,6 +840,7 @@ CHI_1547;South Jiangxi;;;;;;;;;;;;;x
 CHI_1553;North Manchuria;;;;;;;;;;;;;x
 CHI_1555;South Manchuria;;;;;;;;;;;;;x
 CHI_1565;Shangdong;;;;;;;;;;;;;x
+CHI_1577;Chongqing;;;;;;;;;;;;;x
 CHI_1607;Fujian;;;;;;;;;;;;;x
 CHI_1613;North Zhili;;;;;;;;;;;;;x
 CHI_1614;South Zhili;;;;;;;;;;;;;x
