--- a/Victoria Universalis v0.50/localisation/000_Victoria Universalis.csv
+++ b/Victoria Universalis v0.50/localisation/000_Victoria Universalis.csv
@@ -1328,7 +1328,7 @@ disable_non_accepted_craftsmen;Disable Non-Accepted Craftsmen;;;;;;;;;;;;;x
 recently_requested_trade;Requesting Trade Deal;;;;;;;;;;;;;x
 recently_requested_trade_desc;We have sent out offers of trade to the world, now we must wait for a response.;;;;;;;;;;;;;x
 choose_trade_good_title;§YChoose Goods to Send;;;;;;;;;;;;;x
-choose_trade_good_desc;You must have the §W"Allow pops/factories to buy from stockpile"§b button turned §ROFF§b while sending goods. Your trading partner must have this button turned §GON§b, and should not manually buy or sell goods while it is turned on or they risk crashing the world market. Only one country in the trade agreement should send goods at a time.;;;;;;;;;;;;;x
+choose_trade_good_desc;You must have the §Y"Allow pops/factories to buy from stockpile"§W button turned §ROFF§W while sending goods. Your trading partner must have this button turned §GON§W, and should not manually buy or sell goods while it is turned on or they risk crashing the world market. Only one country in the trade agreement should send goods at a time.;;;;;;;;;;;;;x
 request_trade_deal_title;§YRequest Trade Deal;;;;;;;;;;;;;x
 request_trade_deal_desc;We can request to set up a trading deal with another human controlled country. When two countries enter into a trading deal, a decision will appear for both countries that will allow them to send goods to each other directly from their stockpile. You can only have one trading partner at one time, and there can only be 15 trading agreements globally at any time.;;;;;;;;;;;;;x
 accept_trade_deal_1_title;§YAccept Trade Deal;;;;;;;;;;;;;x
